--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+.active {
+    color: rgb(49, 49, 165);
+    background-color: #cfdfff;
+    border-radius: 20px;
+  }
