updating error page

--- a/src/app/Components/errorpage/errorpage.component.html
+++ b/src/app/Components/errorpage/errorpage.component.html
@@ -1,1 +1,12 @@
-<p>errorpage works!</p>
+
+<div class="container-fluid">
+    <div class="row mt-5">
+      <div class="offset-2 col-8 mt-5">
+        <div class="alert alert-primary mt-5 bg-dark p-5 text-center">
+          <p class="alert alert-danger p-3">
+            OPPS! 404 NOT FOUND!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
