handle routing for addnewuser button

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,5 +1,5 @@
 <p class="text-center mt-5">
-  <button class="btn btn-success text-center">Add New Std.</button>
+  <button class="btn btn-success text-center" (click)="goToAddUser()">Add New Std.</button>
 </p>
 <div class="container">
   <div class="row">
