--- a/src/app/Components/userdetails/userdetails.component.html
+++ b/src/app/Components/userdetails/userdetails.component.html
@@ -4,10 +4,13 @@
       <div class="card text-center mt-5">
         <div class="card-header bg-info">User Info</div>
         <div class="card-body">
-          <h5 class="card-title">Ali Ibrahim</h5>
+          <h5 class="card-title"> {{  user.fname}}</h5>
           <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
+            Full Name: {{user.fname}} {{user.lname}}<br>
+            Email : {{user.email}}<br>
+            Age : {{user.age}}<br>
+            City : {{user.address.city}}<br>
+            Street : {{user.address.street}}<br>
           </p>
           <a href="#" class="btn btn-success">Go Home</a>
         </div>
