--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,43 +2,39 @@
 <app-errorpage></app-errorpage>
 <app-home></app-home>
 <app-updateuser></app-updateuser> -->
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
-  <a class="navbar-brand">Aly-Company</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <a class="navbar-brand">Aly-Company</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="home"
-          routerLinkActive="active"
-          >Home</a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="adduser" routerLinkActive="active"
-          >Add User</a
-        >
-      </li>
-    
-      <li class="nav-item">
-        <a class="nav-link" routerLink="errors" routerLinkActive="active"
-          ><span class="text-danger">Error 404</span></a
-        >
-      </li>
-    </ul>
-  </div>
-</nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="home" routerLinkActive="active"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="adduser" routerLinkActive="active"
+                >Add User</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" routerLink="errors" routerLinkActive="active"
+                ><span class="text-danger">Error 404</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
 <router-outlet></router-outlet>
-
