handling update user

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -33,7 +33,7 @@
               <button class="btn btn-info" (click)="viewUser(usr.id)">view</button>
             </td>
             <td>
-              <button href="#" class="btn btn-primary" (click)="updateUser()">
+              <button href="#" class="btn btn-primary" (click)="updateUser(usr.id)">
                 update
               </button>
             </td>
