--- a/src/app/Components/updateuser/updateuser.component.html
+++ b/src/app/Components/updateuser/updateuser.component.html
@@ -1,1 +1,88 @@
-<p>updateuser works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-12 mt-4">
+        <form class="text-light p-5" (ngSubmit)="UpdateUser()">
+          <div class="form-group">
+            <label for="fname">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="fname"
+              placeholder="Enter your First Name "
+              name="fname"
+              [(ngModel)]="usertoupdate.fname"
+            />
+            <div class="text-danger">FirstName is Required</div>
+          </div>
+          <div class="form-group">
+            <label for="lname">Last Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="lname"
+              placeholder="Enter your Last Name "
+              name="lname"
+              [(ngModel)]="usertoupdate.lname"
+            />
+            <div class="text-danger">LastName is Required</div>
+          </div>
+          <div class="form-group">
+            <label for="lname">Email</label>
+            <input
+              type="text"
+              class="form-control"
+              id="email"
+              placeholder="Enter your Email"
+              name="email"
+              [(ngModel)]="usertoupdate.email"
+            />
+            <div class="text-danger">Email is Required</div>
+          </div>
+          <div class="form-group">
+            <label for="fname">Age</label>
+            <input
+              type="number"
+              class="form-control"
+              id="age"
+              placeholder="Enter your Age "
+              name="age"
+              [(ngModel)]="usertoupdate.age"
+            />
+            <div class="text-danger">
+              Age is Required and betwwen 18 and 60
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="city">City</label>
+            <input
+              type="text"
+              class="form-control"
+              id="city"
+              placeholder="Enter your City"
+              name="city"
+              [(ngModel)]="usertoupdate.address.city"
+            />
+            <div class="text-danger">City is Required</div>
+          </div>
+          <div class="form-group">
+            <label for="street">Street</label>
+            <input
+              type="text"
+              class="form-control"
+              id="street"
+              placeholder="Enter your Street"
+              name="street"
+              [(ngModel)]="usertoupdate.address.street"
+            />
+            <div class="text-danger">Street is Required</div>
+          </div>
+          <div class="form-group">
+            <input
+              type="submit"
+              class="form-control btn btn-primary"
+              value="Update"
+            />
+          </div>
+        </form>
+      </div>
+  
