--- a/src/app/Components/userdetails/userdetails.component.html
+++ b/src/app/Components/userdetails/userdetails.component.html
@@ -12,7 +12,7 @@
             City : {{user.address.city}}<br>
             Street : {{user.address.street}}<br>
           </p>
-          <a href="#" class="btn btn-success">Go Home</a>
+          <button (click)="goHome()" class="btn btn-success">Go Home</button>
         </div>
         <div class="card-footer text-muted bg-info">you are welcome</div>
       </div>
