--- a/src/app/Components/adduser/adduser.component.html
+++ b/src/app/Components/adduser/adduser.component.html
@@ -1,88 +1,97 @@
 <div class="container">
-    <div class="row">
-      <div class="col-12 mt-4">
-        <form class="text-light p-5" (ngSubmit)="AddNewUser()">
-          <div class="form-group">
-            <label for="fname">First Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="fname"
-              placeholder="Enter your First Name "
-              name="fname"
-              [(ngModel)]="fname"
-            />
-            <div class="text-danger">FirstName is Required</div>
-          </div>
-          <div class="form-group">
-            <label for="lname">Last Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="lname"
-              placeholder="Enter your Last Name "
-              name="lname"
-              [(ngModel)]="lname"
-            />
-            <div class="text-danger">LastName is Required</div>
-          </div>
-          <div class="form-group">
-            <label for="lname">Email</label>
-            <input
-              type="text"
-              class="form-control"
-              id="email"
-              placeholder="Enter your Email "
-              name="email"
-              [(ngModel)]="email"
-            />
-            <div class="text-danger">Email is Required</div>
-          </div>
-          <div class="form-group">
-            <label for="fname">Age</label>
-            <input
-              type="number"
-              class="form-control"
-              id="age"
-              placeholder="Enter your Age "
-              name="age"
-              [(ngModel)]="age"
-            />
-            <div class="text-danger">
-              Age is Required and betwwen 18 and 60
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="city">City</label>
-            <input
-              type="text"
-              class="form-control"
-              id="city"
-              placeholder="Enter your City"
-              name="city"
-              [(ngModel)]="city"
-            />
-            <div class="text-danger">City is Required</div>
-          </div>
-          <div class="form-group">
-            <label for="street">Street</label>
-            <input
-              type="text"
-              class="form-control"
-              id="street"
-              placeholder="Enter your Street"
-              name="street"
-              [(ngModel)]="street"
-            />
-            <div class="text-danger">Street is Required</div>
-          </div>
-          <div class="form-group">
-            <input
-              type="submit"
-              class="form-control btn btn-primary"
-              value="Register"
-            />
-          </div>
-        </form>
-      </div>
-  
+  <div class="row">
+    <div class="col-12 mt-4">
+      <form
+        [formGroup]="Validation"
+        class="text-light p-5"
+        (ngSubmit)="AddNewUser()"
+      >
+        <div class="form-group">
+          <label for="fname">First Name</label>
+          <input
+            formControlName="fname"
+            type="text"
+            class="form-control"
+            id="fname"
+            placeholder="Enter your First Name "
+            name="fname"
+            [(ngModel)]="fname"
+          />
+          <div *ngIf="!isValidFname"  class="text-danger">FirstName is Required</div>
+        </div>
+        <div class="form-group">
+          <label for="lname">Last Name</label>
+          <input
+            formControlName="lname"
+            type="text"
+            class="form-control"
+            id="lname"
+            placeholder="Enter your Last Name "
+            name="lname"
+            [(ngModel)]="lname"
+          />
+          <div *ngIf="!isValidLname"  class="text-danger">LastName is Required</div>
+        </div>
+        <div class="form-group">
+          <label for="lname">Email</label>
+          <input
+            formControlName="email"
+            type="text"
+            class="form-control"
+            id="email"
+            placeholder="Enter your Email "
+            name="email"
+            [(ngModel)]="email"
+          />
+          <div *ngIf="!isValidEmail"  class="text-danger">Email is Incorrect</div>
+        </div>
+        <div class="form-group">
+          <label for="fname">Age</label>
+          <input
+            formControlName="age"
+            type="number"
+            class="form-control"
+            id="age"
+            placeholder="Enter your Age "
+            name="age"
+            [(ngModel)]="age"
+          />
+          <div *ngIf="!isValidAge"  class="text-danger">Age is Required and betwwen 18 and 60</div>
+        </div>
+        <div class="form-group">
+          <label for="city">City</label>
+          <input
+            formControlName="city"
+            type="text"
+            class="form-control"
+            id="city"
+            placeholder="Enter your City"
+            name="city"
+            [(ngModel)]="city"
+          />
+          <div *ngIf="!isValidCity"  class="text-danger">City is Required</div>
+        </div>
+        <div class="form-group">
+          <label for="street">Street</label>
+          <input
+            formControlName="street"
+            type="text"
+            class="form-control"
+            id="street"
+            placeholder="Enter your Street"
+            name="street"
+            [(ngModel)]="street"
+          />
+          <div *ngIf="!isValidStreet"  class="text-danger">Street is Required</div>
+        </div>
+        <div class="form-group">
+          <input
+            type="submit"
+            class="form-control btn btn-primary"
+            value="Register"
+          />
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
