--- a/src/app/Components/adduser/adduser.component.html
+++ b/src/app/Components/adduser/adduser.component.html
@@ -17,7 +17,7 @@
             name="fname"
             [(ngModel)]="fname"
           />
-          <div *ngIf="!isValidFname"  class="text-danger">FirstName is Required</div>
+          <div *ngIf="!isValidFname && fname"  class="text-danger">FirstName is Required</div>
         </div>
         <div class="form-group">
           <label for="lname">Last Name</label>
@@ -30,7 +30,7 @@
             name="lname"
             [(ngModel)]="lname"
           />
-          <div *ngIf="!isValidLname"  class="text-danger">LastName is Required</div>
+          <div *ngIf="!isValidLname && lname"  class="text-danger">LastName is Required</div>
         </div>
         <div class="form-group">
           <label for="lname">Email</label>
@@ -43,7 +43,7 @@
             name="email"
             [(ngModel)]="email"
           />
-          <div *ngIf="!isValidEmail"  class="text-danger">Email is Incorrect</div>
+          <div *ngIf="!isValidEmail && email"  class="text-danger">Email is Incorrect</div>
         </div>
         <div class="form-group">
           <label for="fname">Age</label>
@@ -56,7 +56,7 @@
             name="age"
             [(ngModel)]="age"
           />
-          <div *ngIf="!isValidAge"  class="text-danger">Age is Required and betwwen 18 and 60</div>
+          <div *ngIf="!isValidAge && age"  class="text-danger">Age is Required and betwwen 18 and 60</div>
         </div>
         <div class="form-group">
           <label for="city">City</label>
@@ -69,7 +69,7 @@
             name="city"
             [(ngModel)]="city"
           />
-          <div *ngIf="!isValidCity"  class="text-danger">City is Required</div>
+          <div *ngIf="!isValidCity && city"  class="text-danger">City is Required</div>
         </div>
         <div class="form-group">
           <label for="street">Street</label>
@@ -82,7 +82,7 @@
             name="street"
             [(ngModel)]="street"
           />
-          <div *ngIf="!isValidStreet"  class="text-danger">Street is Required</div>
+          <div *ngIf="!isValidStreet && street"  class="text-danger">Street is Required</div>
         </div>
         <div class="form-group">
           <input
